# inventory

./: .gitignore  README.md  db.json  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json  webpack.config.js
docker/: docker-compose.local.yml
docker/inventory/: Dockerfile.local  entrypoint.sh
inventory/: asgi.py  conftest.py  urls.py  wsgi.py
inventory/inventories/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
inventory/inventories/migrations/: 0001_initial.py
inventory/inventories/templates/inventories/: inventory_detail.html  inventory_list.html  list.html
inventory/inventories/tests/: test_forms.py  test_models.py  test_views.py
inventory/settings/: base.py
inventory/suppliers/: models.py
inventory/suppliers/migrations/: 0001_initial.py
inventory/templates/: base.html
inventory_fe/: interface.ts
inventory_fe/components/: Empty.svelte  Loading.svelte  Search.svelte  Table.svelte
inventory_fe/components/inventoryList/: App.svelte  index.ts
inventory_fe/pages/inventoryList/: App.svelte  index.ts  store.ts
inventory_fe/scss/: style.scss
