[tool.poetry]
name = "inventory"
version = "0.1.0"
description = "A simple inventory management system using Django"
authors = ["Syafiq Termizi <ahmadsyafiq93@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
